--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "CampusConnectApp",
     "version": "1.0.0",
     "orientation": "portrait",
+    "image": "./assets/splash-icon.png",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
